tests/error_tests/nested_module_redecl.tau
module m{
    module impl{}
}
module m{
    module impl{}
}
func main(){
    import m;
}
